--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ bind - split-window -v
 unbind r
 bind r source-file ~/.tmux.conf
 
-bind -r j resize-pane -D 5  
+bind -r j resize-pane -D 15  
 bind -r k resize-pane -U 5
 bind -r h resize-pane -L 5
 bind -r l resize-pane -R 5
@@ -21,6 +21,8 @@ bind -r l resize-pane -R 5
 bind -r m resize-pane -Z
 
 set -g mouse on
+
+#### PLUGINS ####
 
 # plugin manager
 set -g @plugin 'tmux-plugins/tpm'
