--- a/tmux.conf
+++ b/tmux.conf
@@ -53,7 +53,7 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # plugin manager
 set -g @plugin 'tmux-plugins/tpm'
-
+set -g @plugin "nordtheme/tmux"
 # plugins list
 set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/nvim with Ctrl-hjkl
 
